# experiment

./: .gitignore.txt  CMakeLists.txt  Ref.c  doubleLinkedList.c  main.c  randomEval.c  time.c
Event-based/: doubleLinkedList.h  main.c  splaytree.c  splaytree.h
Pending event set/: doubleLinkedList.h  main.c  splaytree.h
Random (Whole number priorities in interval)/: doubleLinkedList.c  doubleLinkedList.h  main.c  splaytree.h
Ready-queue/: doubleLinkedList.h  main.c  splaytree.h
Results/: Event_DoubleLinkedList_Avg  Event_DoubleLinkedList_Best  Event_DoubleLinkedList_Memory_Raw  Event_DoubleLinkedList_Time_Raw  Event_DoubleLinkedList_Worst  Event_Splaytree_Avg  Event_Splaytree_Memory_Raw  Event_Splaytree_Time_Raw  Ready_DoubleLinkedList_Avg  Ready_DoubleLinkedList_Best  Ready_DoubleLinkedList_Memory_Raw  Ready_DoubleLinkedList_Time_Raw  Ready_DoubleLinkedList_Worst  Ready_Splaytree_Avg  Ready_Splaytree_Best  Ready_Splaytree_Memory_Raw  Ready_Splaytree_Time_Raw  Ready_Splaytree_Worst
final/: Event_DoubleLinkedList_Avg  Event_DoubleLinkedList_Memory_Raw  Event_Splaytree_Best  Event_Splaytree_Time_Raw  Event_Splaytree_Worst  Ready_DoubleLinkedList_Avg  Ready_DoubleLinkedList_Best  Ready_DoubleLinkedList_Memory_Raw  Ready_DoubleLinkedList_Time_Raw  Ready_DoubleLinkedList_Worst  Ready_Splaytree_Avg  Ready_Splaytree_Best  Ready_Splaytree_Memory_Raw  Ready_Splaytree_Time_Raw  Ready_Splaytree_Worst
